serveCost in progress

--- a/RemTool/ClientApp/src/app/admin/edit-tools/edit-tools.component.html
+++ b/RemTool/ClientApp/src/app/admin/edit-tools/edit-tools.component.html
@@ -11,8 +11,8 @@
             <label for="name">Название</label>
             <input id="type" formControlName="type" type="text">
             <label for="type">Категория</label>
-            <!-- <input id="" type="checkbox">
-            <label for="">Электроинструмент</label> -->
+            <input id="" type="checkbox">
+            <label for="">Электроинструмент</label>
         </form>
     </div>
     <div id="content-2">
