--- a/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
+++ b/RemTool/ClientApp/src/app/admin/shared/admin-layout/admin-layout.component.html
@@ -4,9 +4,9 @@
     </h1>
 
     <ul *ngIf="auth.isAuth() else login">
-      <li routerLinkActive="active">
+      <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'edit-tools']">Редактировать инструменты</a>
-      </li>
+      </li> -->
       <!-- <li routerLinkActive="active">
         <a [routerLink]="['/admin', 'edit']">Редактировать инструмент</a>
       </li> -->
