--- a/RemTool/ClientApp/src/app/admin/spareparts-page/spareparts-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/spareparts-page/spareparts-page.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css" />
+<!-- <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css" /> -->
 
 <h1>Список Запчастей</h1>
 <input type="button" value="Добавить" class="btn btn-default" (click)="addSparePart()" />
