--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -9,6 +9,7 @@
     --light-color: #F2F2F2;
     --orange-color: #E2632A; //rgb(226,99,42)
     --alarm-color: #E2352A;
+    --green-color: #409D3E;
     --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
 }
 
