--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -35,8 +35,10 @@
 }
 
 .price {
+    & label {
+    }
     &__container {
-
+        margin-top: 10px;
     }
     &__row {
         display: flex;
@@ -54,6 +56,9 @@
 
 .old-row {
     color: var(--grey-color);
+    & input {
+        border: 1px solid var(--green-color);
+    }
     & button {
         display: flex;
         align-items: center;
@@ -63,11 +68,74 @@
 }
 
 .new-row {
-    & span, & input {
-        width: 40%;
-        border: 1px solid var(--dark-color);
-    }
     & button {
         width: 15%;
+    }
+}
+
+
+.popup {
+    position: fixed;
+    // position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    top: 0;
+    left: 0;
+    &__body {
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 30px 10px;
+    }
+    &__content {
+        background-color: var(--light-color);
+        color: var(--dark-color);
+        max-width: 80%;
+        max-height: 80vh;
+        padding: 30px;
+        text-align: center;
+        overflow-y: auto;
+    }
+    &__header {
+        position: relative;
+        margin-bottom: 30px;
+        text-align: left;
+    }
+    &__upload, &__close {
+        text-decoration: none;
+        background-color: var(--grey-color);
+        padding: 5px 10px;
+        color: var(--dark-color);
+        font-size: 16px;
+        cursor: pointer;
+        border: none;
+        &:hover {
+            background-color: var(--dark-color);
+            color: var(--light-color);
+        }
+    }
+    &__close {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 24px;
+    }
+    &__images {
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 1em;
+        grid-auto-rows: auto;
+        grid-auto-columns: auto;
+        justify-items: start;
+        & a {
+            border: 2px solid var(--dark-color);
+            // box-sizing: border-box;
+            & img {
+                width: 100%;
+            }
+        }
     }
 }
