--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -258,6 +258,10 @@
       <!-- <input type="text" [(ngModel)]="toolType.imgRefenrence" class="form-control" /> -->
     </div>
 
+    <hr>
+
+    <quill-editor></quill-editor>
+
     <div>
       <button (click)="saveToolType()" class="btn btn-success">
         Сохранить
