--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -2,6 +2,8 @@
 @import 'reset.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
 @import 'swiper/swiper-bundle.css';
+@import '~quill/dist/quill.snow.css';
+
 :root {
     --dark-color: #131522;
     --dark-grey-color: #828282;
