--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -1,4 +1,7 @@
-﻿h1 {
+﻿// @import '~quill/dist/quill.snow.css';
+// @import url('~quill/dist/quill.snow.css');
+
+h1 {
     margin: 30px 0;
     font-size: 24px;
     font-weight: 600;
@@ -75,6 +78,7 @@
 
 
 .popup {
+    z-index: 999;
     position: fixed;
     // position: absolute;
     width: 100%;
@@ -130,12 +134,14 @@
         grid-auto-rows: auto;
         grid-auto-columns: auto;
         justify-items: start;
-        & a {
+        & img {
             border: 2px solid var(--dark-color);
+            // width: 100%;
+            // height: 100px;
+            cursor: pointer;
+        }
+        & a {
             // box-sizing: border-box;
-            & img {
-                width: 100%;
-            }
         }
     }
 }
