--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -2,19 +2,19 @@
     <div class="header__topper">
         <span>График работы: пн-пт 10:00-20:00</span>
         <a href="https://yandex.ru/maps/-/CCQSEMaDOB">Наш адрес: МКАД, 32-й километр, вл 15</a>
-        <button class="button_light" onclick="this.blur();">
+        <button class="button_light" onclick="this.blur()">
             Оставить заявку
         </button>
     </div>
     <nav class="header__nav nav">
         <ul>
             <li class="header__logo" routerLinkActive='active'>
-                <a [routerLink]="['/']" onclick="this.blur();">
+                <a [routerLink]="['/']">
                     <img src="assets/img/header__logo.svg" alt="logo">
                 </a>
             </li>
             <li class="nav__item" routerLinkActive='active'>
-                <a class="nav__link drop" [routerLink]="['tools']" onclick="this.blur();">
+                <a class="nav__link drop" [routerLink]="['tools']">
                     Инструменты
                 </a>
                 <div class="arrow-down">
@@ -25,7 +25,7 @@
                 <div class="drop-menu">
                     <div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" [queryParams]="{type: 'electro'}" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']" [queryParams]="{type: 'electro'}">
                                 Электроинструмент
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,7 +47,7 @@
                             </div>
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" [queryParams]="{type: 'benzo'}" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']" [queryParams]="{type: 'benzo'}">
                                 Бензоинструмент
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Садовая техника
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +80,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Компрессоры
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -90,7 +90,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Генераторы
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -100,7 +100,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Сварочная техника
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,7 +110,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Тепловые пушки
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +120,7 @@
                             </div> -->
                         </div>
                         <div class="drop-menu__item">
-                            <a class="drop-menu__link" [routerLink]="['tools']" onclick="this.blur();">
+                            <a class="drop-menu__link" [routerLink]="['tools']">
                                 Техника для отдыха
                             </a>
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -133,15 +133,15 @@
                 </div>
             </li>
             <li class="nav__item" routerLinkActive='active'>
-                <a class="nav__link" [routerLink]="['delivery']" onclick="this.blur();">Доставка и оплата</a>
+                <a class="nav__link" [routerLink]="['delivery']">Доставка и оплата</a>
             </li>
             <li class="nav__item" routerLinkActive='active'>
-                <a class="nav__link" [routerLink]="['contacts']" onclick="this.blur();">Контакты</a>
+                <a class="nav__link" [routerLink]="['contacts']">Контакты</a>
             </li>
             <li class="header__search">
                 <form action="">
                     <input type="search" placeholder="Найти инструмент или бренд">
-                    <button type="submit" onclick="this.blur();">
+                    <button type="submit" onclick="this.blur()">
                         <!-- <img src="assets/img/search-icon.svg" alt=""> -->
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M19.9399 18.5624L13.4474 12.0699C14.4549 10.7675 14.9999 9.17496 14.9999 7.49997C14.9999 5.49498 14.2174 3.61498 12.8024 2.19749C11.3874 0.779996 9.50246 0 7.49997 0C5.49748 0 3.61248 0.782496 2.19749 2.19749C0.779996 3.61248 0 5.49498 0 7.49997C0 9.50246 0.782496 11.3874 2.19749 12.8024C3.61248 14.2199 5.49498 14.9999 7.49997 14.9999C9.17496 14.9999 10.765 14.4549 12.0674 13.4499L18.5599 19.9399C18.579 19.959 18.6016 19.9741 18.6264 19.9844C18.6513 19.9947 18.678 20 18.7049 20C18.7318 20 18.7585 19.9947 18.7834 19.9844C18.8083 19.9741 18.8309 19.959 18.8499 19.9399L19.9399 18.8524C19.959 18.8334 19.9741 18.8108 19.9844 18.7859C19.9947 18.761 20 18.7343 20 18.7074C20 18.6805 19.9947 18.6538 19.9844 18.6289C19.9741 18.6041 19.959 18.5815 19.9399 18.5624ZM11.46 11.46C10.4 12.5174 8.99496 13.0999 7.49997 13.0999C6.00497 13.0999 4.59998 12.5174 3.53998 11.46C2.48249 10.4 1.89999 8.99496 1.89999 7.49997C1.89999 6.00497 2.48249 4.59748 3.53998 3.53998C4.59998 2.48249 6.00497 1.89999 7.49997 1.89999C8.99496 1.89999 10.4025 2.47999 11.46 3.53998C12.5174 4.59998 13.0999 6.00497 13.0999 7.49997C13.0999 8.99496 12.5174 10.4025 11.46 11.46Z" fill="#131522"/>
