--- a/RemTool/ClientApp/src/reset1.scss
+++ b/RemTool/ClientApp/src/reset1.scss
@@ -19,14 +19,15 @@ time, mark, audio, video {
   margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+	// font-size: 100%;
+	// font: inherit;
+	// vertical-align: baseline;
 }
 
 /* make sure to set some focus styles for accessibility */
 :focus {
-    outline: 0;
+    // outline: 0;
+    outline: auto;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -130,7 +131,8 @@ html {
  */
 
 a:focus {
-    outline: thin dotted;
+    outline: auto;
+    // outline: thin dotted;
 }
 
 /**
