--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -1,10 +1,13 @@
 <h1>Список Инструментов</h1>
 <div *ngFor="let tt of toolTypes">
-  {{tt.name}}
-  {{tt.mainType}}
+  <img *ngIf="!!tt.imgRefenrence" src={{tt.imgRefenrence}} alt="">
+  <p>
+    {{tt.name}}
+  </p>
+  <!-- {{tt.mainType}}
   {{tt.brands}}
   {{tt.serveCost}}
-  {{tt.info}}
+  {{tt.info}} -->
 </div>
 <!-- <table class="table">
   <thead>
@@ -195,22 +198,11 @@
       <input type="file" formControlName="newImg" (change)="uploadImage()">
     </form> -->
     
-      <form [formGroup]="newImageForm" (ngSubmit)="onSubmit(newImageForm.value)">
-
-        <div>
-            <label for="newImage">
-                new Image
-            </label>
-            <input type="file" formControlName="newImage" (change)="onSelectFile($event)" >
-        </div>
       
-        <button type="submit">upload</button>
-      
-      </form>
 
 
     <div class="add-image">
-      <div *ngIf="!!this.toolType.imgRefenrence">
+      <div class="tool-image" *ngIf="!!this.toolType.imgRefenrence">
         <img src={{this.toolType.imgRefenrence}} alt="">
       </div>
       <button (click)="chooseImg(true)">Выбрать картинку</button>
@@ -218,13 +210,25 @@
         <div class="popup__body">
           <div class="popup__content">
             <div class="popup__header">
+              <form [formGroup]="newImageForm" (change)="onSubmit(newImageForm.value)">
 
+                <!-- <div> -->
+                    <label class="popup__upload" for="newImage">Загрузить картинку</label>
+                    <input type="file" id="newImage" formControlName="newImage" (change)="onSelectFile($event)" style="display: none;">
+                <!-- </div> -->
+              
+                <!-- <button type="submit">upload</button> -->
+              
+              </form>
 
               <button class="popup__close" (click)="chooseImg(false)">X</button>
             </div>
             Выбрать картинку
             <div class="popup__images">
-              <img *ngFor="let img of images" src={{img}} (click)='addImage($event)' alt="">
+              <div *ngFor="let img of images" >
+                <button (click)="deleteImage($event)">X</button>
+                <img src={{img}} alt="" (click)="addImage($event)">
+              </div>
                 <!-- <img src="../../../assets/img/tools/angle-grinder.png" alt="" (click)='addImage($event)'>
                 <img src="../../../assets/img/tools/drill.png" alt="" (click)='addImage($event)'>
                 <img src="../../../assets/img/tools/perforator.png" alt="" (click)='addImage($event)'>
