--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -136,12 +136,18 @@ h1 {
         justify-items: start;
         & img {
             border: 2px solid var(--dark-color);
-            // width: 100%;
+            width: 100%;
             // height: 100px;
             cursor: pointer;
         }
         & a {
             // box-sizing: border-box;
         }
+    }
+}
+
+.tool-image {
+    & img {
+        width: 50%;
     }
 }
