--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.scss
@@ -151,3 +151,9 @@ h1 {
         width: 50%;
     }
 }
+
+.saved-tool {
+    width: 282px;
+    height: 200px;
+    background-color: var(--grey-color);
+}
