--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -6,7 +6,7 @@
     </div>
     <app-swiper class="hero__slider"></app-swiper>
 </section>
-<section class="we-repair">
+<section id="categories" class="we-repair">
     <h2 class="main-h2">Мы ремонтируем</h2>
     <div class="we-repair__row row-2-col">
         <a class="we-repair__electric" href="#">Электроинструмент</a>
