--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -14,7 +14,8 @@
                 </a>
             </li>
             <li class="nav__item" routerLinkActive='active'>
-                <a class="nav__link drop" [routerLink]="['tools']">
+                <!-- <a class="nav__link drop" [routerLink]="['tools']"> -->
+                <a class="nav__link drop" href="#categories">
                     Инструменты
                 </a>
                 <div class="arrow-down">
